<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_calculator">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_calculator"
                    android:icon="@drawable/ic_menu_calculator"
                    android:title="@string/menu_cal_standard" />
                <item
                    android:id="@+id/nav_advanced_calculator"
                    android:icon="@drawable/ic_menu_calculator_scientific"
                    android:title="@string/menu_cal_advanced" />
                <item
                    android:id="@+id/nav_date_calculator"
                    android:icon="@drawable/ic_icon_date"
                    android:title="@string/menu_cal_date" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_converter">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_currency"
                    android:icon="@drawable/ic_menu_convert_currency"
                    android:title="@string/menu_cv_currency" />
                <item
                    android:id="@+id/nav_temp"
                    android:icon="@drawable/ic_menu_convert_temp"
                    android:title="@string/menu_cv_temp" />
                <item
                    android:id="@+id/nav_length"
                    android:icon="@drawable/ic_menu_convert_length"
                    android:title="@string/menu_cv_length" />
                <item
                    android:id="@+id/nav_weight"
                    android:icon="@drawable/ic_menu_convert_weight"
                    android:title="@string/menu_cv_weight" />
                <item
                    android:id="@+id/nav_speed"
                    android:icon="@drawable/ic_menu_convert_speed"
                    android:title="@string/menu_cv_speed" />
                <item
                    android:id="@+id/nav_data"
                    android:icon="@drawable/ic_menu_convert_data"
                    android:title="@string/menu_cv_data" />
                <item
                    android:id="@+id/nav_time"
                    android:icon="@drawable/ic_menu_convert_time"
                    android:title="@string/menu_cv_time" />
                <item
                    android:id="@+id/nav_area"
                    android:icon="@drawable/ic_menu_convert_area"
                    android:title="@string/menu_cv_area" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_setting">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_menu_setting"
                    android:title="@string/menu_setting"/>
            </group>
        </menu>
    </item>
</menu>
