<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/toolbarColor"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_intro"></TextView>

        <TextView
            android:id="@+id/txtContent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtIntro"
            android:text="@string/about_sub1"></TextView>

        <TextView
            android:id="@+id/txtContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent2"
            android:text="@string/about_content1"></TextView>

        <TextView
            android:id="@+id/txtContent4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent3"
            android:text="@string/about_sub2"></TextView>

        <TextView
            android:id="@+id/txtContent5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent4"
            android:text="@string/about_content2"></TextView>

        <TextView
            android:id="@+id/txtContent6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent4"
            android:text="@string/about_sub3"
            tools:layout_below="@id/txtContent5"></TextView>

        <TextView
            android:id="@+id/txtContent7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent4"
            android:text="@string/about_content3"
            tools:layout_below="@id/txtContent6"></TextView>

        <TextView
            android:id="@+id/txtContent8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent4"
            android:text="@string/about_sub4"
            tools:layout_below="@id/txtContent7"></TextView>

        <TextView
            android:id="@+id/txtContent9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent4"
            android:text="@string/about_content4"
            tools:layout_below="@id/txtContent8"></TextView>

        <TextView
            android:id="@+id/txtContent10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent4"
            android:text="@string/about_intro"
            tools:layout_below="@id/txtContent9"></TextView>

        <TextView
            android:id="@+id/txtContent11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtContent4"
            android:text="@string/about_intro"
            tools:layout_below="@id/txtContent10"></TextView>
    </RelativeLayout>


</LinearLayout>