<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".DataFragment">

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/converter_fromLabel"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtInput"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:inputType="numberDecimal"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spDataFrom"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@+id/txtInput">

        </Spinner>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:paddingTop="170dp"
            android:paddingRight="30dp"
            android:text="@string/converter_toLabel"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="200dp"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spDataTo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="200dp"
            android:layout_toRightOf="@+id/txtResult">

        </Spinner>

        <Button
            android:id="@+id/btConvert"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txtResult"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:background="#0183FC"
            android:text="@string/converter_convertBtn"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="476dp" />

        <Button
            android:id="@+id/btReset"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btConvert"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:background="#0183FC"
            android:text="@string/convert_resetBtn"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="476dp" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>